[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameFlow/Tutorials/SecondTutorial/u_node_is_not_a_star_popup.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/popup_sci-fi-theme.tres" type="Theme" id=2]

[sub_resource type="Animation" id=1]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.201, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}

[node name="UNodeIsNotAStarPopup" type="WindowDialog"]
margin_left = 500.0
margin_top = 220.0
margin_right = 1080.0
margin_bottom = 352.0
theme = ExtResource( 2 )
popup_exclusive = true
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.0
margin_bottom = -8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 574.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Explanation" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 574.0
margin_bottom = 41.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
text = "IS_U_A_STAR?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 574.0
margin_bottom = 106.0
custom_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 134.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="YesButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 0.121569, 0.913725, 0, 1 )
margin_left = 146.0
margin_right = 281.0
margin_bottom = 45.0
focus_neighbour_right = NodePath("../NoButton")
focus_next = NodePath("../NoButton")
focus_previous = NodePath("../../../..")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Yes"

[node name="NoButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_left = 293.0
margin_right = 427.0
margin_bottom = 45.0
focus_neighbour_left = NodePath(".")
focus_next = NodePath("../../../..")
focus_previous = NodePath("../YesButton")
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "No"
icon_align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 439.0
margin_right = 574.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ErrorNotification" type="Label" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -290.0
margin_top = 66.0
margin_right = 284.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 265.108, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 1, 0, 0, 0.227451 )
custom_constants/shadow_as_outline = 180
text = "Error: Wrong answer"
align = 1
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ErrorNotification"]
anims/message_modulation = SubResource( 1 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
